[gd_scene load_steps=7 format=3 uid="uid://bj8jnpnstw7j4"]

[ext_resource type="Script" uid="uid://bnabsrwew6x4a" path="res://Scenes/MainMenu.gd" id="1_ghw46"]
[ext_resource type="Texture2D" uid="uid://d3xl2iixa0rkj" path="res://sprites/BG/main.png" id="2_df05h"]
[ext_resource type="PackedScene" uid="uid://dhr04qd2id07m" path="res://Scenes/ExitButton.tscn" id="3_8saeu"]
[ext_resource type="Texture2D" uid="uid://c64lx8xgbo6jw" path="res://sprites/BUTTONS/ButtonGreen.png" id="4_df05h"]
[ext_resource type="Texture2D" uid="uid://cw8vugq7lpn0j" path="res://sprites/BUTTONS/ButtonGreenDown.png" id="5_8um5k"]
[ext_resource type="AudioStream" uid="uid://cor6yjcxrw6yb" path="res://Sounds/press button.mp3" id="5_df05h"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ghw46")

[node name="BG" type="TextureRect" parent="."]
offset_left = -16.0
offset_top = -23.0
offset_right = 710.0
offset_bottom = 415.0
texture = ExtResource("2_df05h")

[node name="ExitButton" parent="." instance=ExtResource("3_8saeu")]

[node name="WordPreviewScreenButton" type="TextureButton" parent="."]
offset_left = 269.0
offset_top = 82.0
offset_right = 367.0
offset_bottom = 146.0
texture_normal = ExtResource("4_df05h")
texture_pressed = ExtResource("5_8um5k")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="WordPreviewScreenButton"]
stream = ExtResource("5_df05h")

[node name="RewardInventoryButton" type="TextureButton" parent="."]
offset_left = 269.0
offset_top = 158.0
offset_right = 367.0
offset_bottom = 222.0
texture_normal = ExtResource("4_df05h")
texture_pressed = ExtResource("5_8um5k")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="RewardInventoryButton"]
stream = ExtResource("5_df05h")

[node name="StoreButton" type="TextureButton" parent="."]
offset_left = 269.0
offset_top = 233.0
offset_right = 367.0
offset_bottom = 297.0
texture_normal = ExtResource("4_df05h")
texture_pressed = ExtResource("5_8um5k")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="StoreButton"]
stream = ExtResource("5_df05h")

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="WordPreviewScreenButton" to="." method="_on_word_preview_screen_button_pressed"]
[connection signal="pressed" from="RewardInventoryButton" to="." method="_on_reward_inventory_button_pressed"]
[connection signal="pressed" from="StoreButton" to="." method="_on_store_button_pressed"]
